[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=1]
[ext_resource path="res://Images/Main.png" type="Texture" id=2]
[ext_resource path="res://scripts/MenuButtons.gd" type="Script" id=3]
[ext_resource path="res://scenes/OverworldMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/confirm_style_2_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://music/Final Quest - Gentle Moments.mp3" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.984314, 0.945098, 0.945098, 0.145098 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0196078, 0, 0, 1 )

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0.576471 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.6, 0.6, 0.576471 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 0.0392157, 0, 0, 1 )
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 0.0392157, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = 7.0

[node name="Main" type="Sprite" parent="."]
position = Vector2( 961, 532 )
scale = Vector2( 1.20313, 1.05469 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 455.0
margin_top = 286.0
margin_right = 708.0
margin_bottom = 557.0
custom_styles/panel = SubResource( 8 )

[node name="StartButton" type="Button" parent="."]
margin_left = 896.0
margin_top = 557.0
margin_right = 1119.0
margin_bottom = 625.0
theme = SubResource( 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 10 )
script = ExtResource( 3 )
LoadedObject = ExtResource( 4 )

[node name="Name2" type="Label" parent="StartButton"]
anchor_left = 0.003
anchor_right = 0.003
margin_left = 0.331
margin_right = 89.331
margin_bottom = 30.0
rect_scale = Vector2( 2.5, 2.5 )
theme = SubResource( 4 )
custom_constants/line_spacing = 1
custom_styles/normal = SubResource( 5 )
text = "Start"
autowrap = true
clip_text = true

[node name="Settings" type="Button" parent="."]
margin_left = 896.0
margin_top = 699.0
margin_right = 1173.0
margin_bottom = 770.0
theme = SubResource( 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 10 )

[node name="Name2" type="Label" parent="Settings"]
anchor_left = 0.011
anchor_right = 0.011
margin_left = -0.134003
margin_right = 143.898
margin_bottom = 36.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 4 )
custom_constants/line_spacing = 1
custom_styles/normal = SubResource( 9 )
text = "Settings"
clip_text = true

[node name="soundMaker" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 4.632

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 339, -7582 )
stream = ExtResource( 6 )
volume_db = 10.0
autoplay = true
max_distance = 20000.0
attenuation = 0.0167465

[connection signal="mouse_entered" from="StartButton" to="StartButton" method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="Settings" to="StartButton" method="_on_Settings_mouse_entered"]
